usability: avoid gap between a wrapped link in aside bar (#439)

--- a/styles/theme-medium.css
+++ b/styles/theme-medium.css
@@ -400,6 +400,10 @@ aside.tips div.border {
 aside.tips h3 {
   color:#E6E6E6;
 }
+aside.tips li {
+  line-height: 1.2rem; /* avoid gaps in wrapped links */
+  margin-bottom: 0.5rem; /* seperate each link item a little bit from eachother */
+}
 aside.tips a {
   color: var(--background-text-color);
   border-bottom:1px dotted #666;
